[tool.poetry]
name = "anki_poker_master"
version = "0.1.0"
description = ""
authors = ["Omar Kohl <omarkohl@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
poker = "^0.30.0"
genanki = "^0.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
