[tool.poetry]
name = "anki_poker_master"
version = "0.2.0"
description = ""
authors = ["Omar Kohl <omarkohl@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
poker = "^0.30.0"
genanki = "^0.13.1"
schema = "^0.7.5"
importlib-resources = "^6.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
anki-poker-master = 'anki_poker_master.cli:main'

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning:poker",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning:pkg_resources",
]
